@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/PPI
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PPI/ChangeLog,v 1.45 2013/01/13 13:51:17 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PPI/ChangeLog,v 1.46 2013/09/13 13:47:32 idella4 Exp $
+
+*PPI-1.215.0-r1 (13 Sep 2013)
+
+  13 Sep 2013; Ian Delaney <idella4@gentoo.org> +PPI-1.215.0-r1.ebuild:
+  revbump -> EAPI 5
 
   13 Jan 2013; Markus Meier <maekke@gentoo.org> PPI-1.215.0.ebuild:
   add ~arm, bug #449762
